# CellReports_TooManyPeaks_analysis

./: README.md  cicero.R  cistopic.R  cistopic_louvain.R  contingency.hs  cusanovich2018.R  diversity.hs  generate_random_buenrostro.hs  generate_random_satpathy.hs  get_mat.R  purity.hs  rare_population_benchmark.hs  run_apec.py  run_episcanpy.py  run_episcanpy_paga.py  signac.R  snapatac.R  subsample_cellranger_mat.R  timing.hs
clustering-contingency/: clustering-contingency.cabal
clustering-contingency/app/: Main.hs
clustering-contingency/src/ClusteringContingency/: Contingency.hs  Types.hs
