name:                clustering-contingency
version:             0.1.0.0
synopsis:            Create a contingency table.
description:         Get a contingency table from clustering results.
homepage:            http://github.com/GregorySchwartz/clustering-contingency#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@pennmedicine.upenn.edu
copyright:           2018 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ClusteringContingency.Types
                     , ClusteringContingency.Contingency
  build-depends:       base >= 4.7 && < 5
                     , Frames
                     , containers
                     , lens
                     , foldl
                     , text
  ghc-options:         -O2
  default-language:    Haskell2010

executable clustering-contingency
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , clustering-contingency
                     , Frames
                     , optparse-generic
                     , pipes
                     , pipes-text
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/clustering-contingency
